kubernetes/apps/projectionlab/frontend/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: frontend
spec:
  parentRefs:
    - kind: ListenerSet
      name: deangalvin-dev-listener-set
      namespace: networking
  hostnames:
    - projectionlab.deangalvin.dev
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: frontend
          port: 80
